--- a/app/Resources/views/default/landing.html.twig
+++ b/app/Resources/views/default/landing.html.twig
@@ -73,8 +73,8 @@
                 <h3>"{{ quote.content }}"</h3>
                 <h6>{{ quote.quoteBy }}</h6>
             {% else %}
-                <h2 class="title">What is Shout?</h2>
-                <h5 class="description">Shout is a problem sharing site which allows the “shoutee” to express his life story, to lessen the emotion and receive advices from other user.</h5>
+                <h1 class="title">What is Shout?</h1>
+                <h3>Shout is a problem sharing site which allows the “shoutee” to express his life story, to lessen the emotion and receive advices from other user.</h3>
             {% endif %}
             
             <br />
