--- a/app/Resources/views/layouts/navbar.html.twig
+++ b/app/Resources/views/layouts/navbar.html.twig
@@ -8,10 +8,10 @@
         </button>
         <a class="navbar-brand" href="{{ path('shout_list') }}">Shout!</a>
         <div class="collapse navbar-collapse" id="navbar-danger">
-            <div class="col-md-8">
+            <div class="col-md-7">
                 <form class="mt-3" method="get" role="form">
                     <div class="input-group">
-                        <input type="text" class="form-control bg-danger" name="search" placeholder="Search Shoutee" style="border-color: white; color: white">
+                        <input typ7="text" class="form-control bg-danger" name="search" placeholder="Search Shoutee" style="border-color: white; color: white">
                         <button type="submit" class="input-group-addon bg-danger text-white" style="border-color: white">
                             <i class="fa fa-search"></i>
                         </button>
@@ -23,7 +23,10 @@
 
                 {#</li>#}
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="fa fa-bullhorn"></i> My Shouts</a>
+                    <a class="nav-link" href="{{ path('shout_new') }}"><i class="fa fa-plus-square"></i> New Shout</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('my_shout_list') }}"><i class="fa fa-bullhorn"></i> My Shouts</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-notification" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
