--- a/src/AdminBundle/Resources/views/quotes/list.html.twig
+++ b/src/AdminBundle/Resources/views/quotes/list.html.twig
@@ -1,6 +1,7 @@
 {% extends "AdminBundle::base.html.twig" %}
 
-{% block title %}AdminBundle:Quotes:list{% endblock %}
+{% block title %}Quotes' List{% endblock %}
+{% block header %}Manage Quotes{% endblock %}
 
 {% block content %}
 <div class="container-fluid">
