--- a/src/AdminBundle/Resources/views/shouts/list.html.twig
+++ b/src/AdminBundle/Resources/views/shouts/list.html.twig
@@ -1,6 +1,7 @@
 {% extends "AdminBundle::base.html.twig" %}
 
-{% block title %}AdminBundle:spanhouts:list{% endblock %}
+{% block title %}Shouts' Lists{% endblock %}
+{% block header %}Manage Shouts{% endblock %}
 
 {% block content %}
 <div class="container-fluid">
