--- a/src/AdminBundle/Resources/views/base.html.twig
+++ b/src/AdminBundle/Resources/views/base.html.twig
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/png" href="{{ asset('assets/img/favicon.ico') }}">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-    <title>{% block title %} {% endblock %}</title>
+    <title>{% block title %}{% endblock %}</title>
 
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
@@ -44,40 +44,41 @@
             </div>
 
             <ul class="nav">
-                <li>
+                <li id="nav-home">
                     <a href="{{path('admin_index')}}">
                         <i class="ti-pie-chart"></i>
                         <p>Dashboard</p>
 
                     </a>
                 </li>
-                <li>
+                <li id="nav-user">
                     <a href="{{path('admin_user')}}">
                         <i class="ti-user"></i>
                         <p>Users Management</p>
                     </a>
                 </li>
-                <li>
+                <li id="nav-shout">
                     <a href="{{path('admin_shouts_list')}}">
                         <i class="ti-announcement"></i>
                         <p>Shouts</p>
 
                     </a>
                 </li>
-                  <li>
+                  <li id="nav-quote">
                     <a href="{{path('admin_quotes_list')}}">
                         <i class="ti-thought"></i>
                         <p>Quote of the Day</p>
 
                     </a>
                     </li>
-	                <!-- <li>
-                    <a href="reports.html">
+
+	                <li id="nav-quotecatg">
+                    <a href="{{path('admin_quotecatg_list')}}">
                         <i class="ti-wallet"></i>
-                        <p>Reports</p>
+                        <p>Quote Category</p>
 
                     </a>
-                </li>-->
+                </li>
             </ul>
         </div>
     </div>
@@ -92,7 +93,7 @@
                         <span class="icon-bar bar2"></span>
                         <span class="icon-bar bar3"></span>
                     </button>
-                    <a class="navbar-brand" style="color:white;" href="#">Template</a>
+                    <a class="navbar-brand" style="color:white;" href="#">{% block header %}{% endblock %}</a>
                 </div>
                 <div class="collapse navbar-collapse">
                    <ul class="nav navbar-nav navbar-right" >
@@ -117,12 +118,20 @@
                               <li><a href="#">Another notification</a></li>
                             </ul>
                         </li>
-                        <li>
-                            <a href="#" style="color:white;">
-                                <i class="ti-settings"></i>
-                                <p>Settings</p>
-                            </a>
-                        </li>
+                         <li class=" dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#" type="button"  style="color:white;" aria-haspopup="true" aria-expanded="false"><p>ADMIN {{ app.user.username }}</p></a> 
+                            <ul class="dropdown-menu dropdown-menu-right dropdown-danger">
+                                <li class="dropdown-header">Account</li>
+                                <li class="dropdown-item"><a href="{{ path('my_profile_show') }}"><i class="fa fa-user"></i> Profile</a></li>
+                                {#<li class="dropdown-item"><a href="#pk"><i class="fa fa-cog"></i> Settings</a></li>#}
+                                <li class="dropdown-item"><a href="{{ path('change_password') }}"><i class="fa fa-asterisk"></i> Password</a></li>
+                                {#<li class="dropdown-item"><a href="#pk">Change Password</a></li>#}
+                                {#<div class="dropdown-divider"></div>#}
+                                {#<li class="dropdown-item"><a href="#pk"></a></li>#}
+                                <div class="dropdown-divider"></div>
+                                <li class="dropdown-item"><a href="{{ path('logout') }}"><i class="fa fa-sign-out"></i> Logout</a></li>
+                    </ul>
+                </li>
                     </ul>
 
                 </div>
@@ -222,6 +231,6 @@
 <!-- Paper Dashboard Core javascript and methods for Demo purpose -->
 <script src="{{ asset('assets/js/paper-dashboard.js') }}"></script>
 
-
+{% block js %} {% endblock %}
 
 </html>
