--- a/app/Resources/views/emails/registration.html.twig
+++ b/app/Resources/views/emails/registration.html.twig
@@ -1,11 +1,17 @@
-<h3>You did it! You registered!</h3>
+<h3>Welcome, New Shoutee!</h3>
+{#<h3>You did it! You registered!</h3>#}
 
-Hi {{ name }}! You're successfully registered.
+Hi {{ name }},
+<br>
+You're successfully registered. To continue, please confirm your email address by clicking the link below
 
+<br>
 {# example, assuming you have a route named "login" #}
-To login, go to: <a href="{{ url('login') }}">...</a>.
+<a class="btn btn-primary btn-round" href="{{ url('registration_confirm', {confirmationToken: token}) }}">Confirm Email address</a>.
 
-Thanks!
+<br><br>
+Thanks,
+Team Shout
 
 {# Makes an absolute URL to the /images/logo.png file #}
 <img src="{{ absolute_url(asset('assets/img/apple-icon.png')) }}">
